--- a/index.html
+++ b/index.html
@@ -9,6 +9,20 @@
     <script src="index.js"></script>
 </head>
 <body>
-    
+    <div class="container">
+        <div id="todos">
+            <h3>ToDo List</h3>
+            <h4>Monday</h4>
+            <form id="todo-form">
+                <div class="field">
+                    <input id="new_todo" type="text" placeholder="New To Do">
+                    <input type="submit" class="btn" value="Submit">
+                </div>
+            </form>
+            <div id="todo_container">
+                
+            </div>
+        </div>
+    </div>
 </body>
 </html>
